Closed Bug 1006790 Opened 10 years ago Closed 10 years ago

[B2G][Browser] Page elements shake when user scrolls through comments on Youtube video page

Categories

(Core :: Panning and Zooming, defect)

30 Branch
ARM
Gonk (Firefox OS)
defect
Not set
normal

Tracking

()

VERIFIED FIXED
mozilla32
tracking-b2g backlog
Tracking Status
b2g-v1.3 --- unaffected
b2g-v1.4 --- affected
b2g-v2.0 --- fixed
b2g-v2.5 --- verified
b2g-master --- verified

People

(Reporter: bzumwalt, Assigned: kats)

References

()

Details

(Keywords: regression)

Attachments

(2 files)

Attached file LogCat
Description:
While on viewing the comments section of a Youtube video webpage, scrolling vertically causes the text of comments and surrounding page elements to shake. No shaking is visible outside of comments section.

Repro Steps:
1) Updated Open_C to Build ID: 20140506000202
2) Launch browser and navigate to youtube.com
3) Select any listed video
4) Scroll down to and expand comments section
5) Scroll up and down

Actual:
Comments section vibrates during scrolling.

Expected:
Page elements do not vibrate unexpectedly.

Environmental Variables
Device: Open_C v1.4 Mozilla RIL
Build ID: 20140506000202
Gecko: https://hg.mozilla.org/releases/mozilla-b2g30_v1_4/rev/fe4080728c60
Gaia: b1242f33981024de59b8b4c26bacff8b876211b1
Platform Version: 30.0
Firmware Version: FFOS_US_EBAY_P821A10V1.0.0B06_LOG_DL

Notes:
Repro frequency: 3/3, 100%
See attached: Youtube video clip and logcat
Youtube Link: http://youtu.be/ZljF2WnRPO0
'qawanted', does it reproduce on Buri?
Keywords: qawanted
This issue does reproduce on 1.4 Buri.

1.4 Environmental Variables:
Device: Buri 1.4 MOZ
BuildID: 20140506040204
Gaia: 4af716f09747edfbea637f5b60f7fd7d0183f19b
Gecko: 81651ad5e43c
Version: 32.0a1
Firmware Version: v1.2-device.cfg

The comments section shakes violently while it is being scrolled through.
does it happen on trunk and 1.3?
Keywords: qawanted
This issue does occur on 2.0 Buri but does not occur on 1.3 Buri or the 1.3 OpenC base.

2.0 Buri
2.0 Environmental Variables:
Device: Buri 2.0 MOZ
BuildID: 20140506040204
Gaia: 4af716f09747edfbea637f5b60f7fd7d0183f19b
Gecko: 81651ad5e43c
Version: 32.0a1
Firmware Version: v1.2-device.cfg

The comment section shakes when scrolled through.


Buri 1.3:
1.3 Environmental Variables:
Device: Buri 1.3 MOZ
BuildID: 20140505024001
Gaia: 667539f1ed4becc45b182a5f1046221d3eeb9e7c
Gecko: bf3fe474bf50
Version: 28.0
Firmware Version: v1.2-device.cfg

OpenC 1.3 Base:
1.3 Environmental Variables:
Device: OpenC 1.3 MOZ
BuildID: 20140505052400
Gaia: Unknown Git commit; build date shown here.
Gecko:
Version: 28.0
Firmware Version: FFOS_US_EBAY_P821A10V1.0.0B06_LOG_DL

The screen scrolls without any visible shaking of the comment section.
Keywords: qawanted
Minor regression. Might be a panning & zooming bug?
Component: Gaia::Browser → Panning and Zooming
Keywords: regression
Product: Firefox OS → Core
Version: unspecified → 30 Branch
Here's a simplified test case that reproduces the problem for me. It appears to be a result of the border on the scrollable subframe. http://people.mozilla.org/~kgupta/bug/1006790.html
Assignee: nobody → bugmail.mozilla
Attached patch PatchSplinter Review
In the test case I linked above, the composition bounds are 310px wide and the scrollable rect is 300px wide, so Axis.cpp thinks the page is perpetually in overscroll and causes jitter. Fixed by using the expanded scrollable rect instead. However a more correct fix might be to reduce the size of the composition bounds to exclude the borders, because the borders do not scroll. Thoughts?
Attachment #8421075 - Flags: review?(botond)
Comment on attachment 8421075 [details] [diff] [review]
Patch

Review of attachment 8421075 [details] [diff] [review]:
-----------------------------------------------------------------

(In reply to Kartikaya Gupta (email:kats@mozilla.com) from comment #7)
> In the test case I linked above, the composition bounds are 310px wide and
> the scrollable rect is 300px wide, so Axis.cpp thinks the page is
> perpetually in overscroll and causes jitter. Fixed by using the expanded
> scrollable rect instead. 

I think it's a good idea to use the expanded scrollable rect regardless of what we do about borders, so r+.

> However a more correct fix might be to reduce the
> size of the composition bounds to exclude the borders, because the borders
> do not scroll. Thoughts?

Agreed. I seem to recall Timothy and I discussing this and agreeing to file it away for future fixing, though I can't find a record of it at the moment.
Attachment #8421075 - Flags: review?(botond) → review+
I found bug 914666 that seems to cover that.
(In reply to Kartikaya Gupta (email:kats@mozilla.com) from comment #9)
> I found bug 914666 that seems to cover that.

That's the one!
https://hg.mozilla.org/mozilla-central/rev/260ace9b95eb
Status: NEW → RESOLVED
Closed: 10 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla32
qawanted to verify it's fixed on master; if so I can request uplift for this patch.
Keywords: qawantedverifyme
blocking-b2g: --- → 1.4?
Minor and hence taking in 2.0. Its on master anyway
blocking-b2g: 1.4? → backlog
blocking-b2g: backlog → ---
This issue is verified fixed in the lates Aries Master, Flame Master, and Flame 2.5 builds.

Actual Results:  Page elements do not move eratically when scrolling.

Environmental Variables:
Device: Aries 2.6 [Full Flash]
BuildID: 20151208121557
Gaia: 6b430ea7274af4c352de16b75e6bb85d7621ca83
Gecko: 2bdd9ec79799eff3ceec0a318f5a0632d918a527
Gonk: a19052e4389c3ae2d8fc3e7a74a475401baacc56
Version: 45.0a1 (2.6) 
Firmware Version: D5803_23.1.A.1.28_NCB.ftf
User Agent: Mozilla/5.0 (Mobile; rv:45.0) Gecko/45.0 Firefox/45.0

Environmental Variables:
Device: FlameKK 2.6 [Full Flash][512mb]
BuildID: 20151208030225
Gaia: 6b430ea7274af4c352de16b75e6bb85d7621ca83
Gecko: 2bdd9ec79799eff3ceec0a318f5a0632d918a527
Gonk: 205ac4204bbbb2098a8046444acba551ba5dc75a
Version: 45.0a1 (2.6) 
Firmware Version: v18D
User Agent: Mozilla/5.0 (Mobile; rv:45.0) Gecko/45.0 Firefox/45.0

Environmental Variables:
Device: Flame 2.5 [Full Flash][512mb]
BuildID: 20151208120554
Gaia: 2d54c29f429bed790b5d8284633812dc2b782518
Gecko: ff31a251b2f6149edf4fc0a199133ef2e190ceac
Gonk: 205ac4204bbbb2098a8046444acba551ba5dc75a
Version: 44.0a2 (2.5) 
Firmware Version: v18D
User Agent: Mozilla/5.0 (Mobile; rv:44.0) Gecko/44.0 Firefox/44.0
Status: RESOLVED → VERIFIED
Keywords: verifyme
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: