Bug 1006790 - Ensure the overscroll checks are correct if the scrollable rect is smaller than the composition bounds. r=botond